perf: update examples

--- a/examples/inpaint_test.ipynb
+++ b/examples/inpaint_test.ipynb
@@ -350,7 +350,6 @@
    "cell_type": "markdown",
    "id": "2814f7ae",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -409,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5bd558b6-df08-495d-9499-573c5c375f9b",
    "metadata": {},
    "outputs": [
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "4205444c-daa9-4ec8-8ef5-9cad1fdff9b7",
    "metadata": {},
    "outputs": [
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "f90b6dfa",
    "metadata": {},
    "outputs": [
@@ -521,12 +520,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fbee5a63-23be-45c2-89bd-d648146f72fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['seq_chain_A', 'coords_chain_A', 'name', 'num_of_chains', 'seq', 'coords', 'masked_list', 'visible_list'])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(desinger._structure)"
+    "designer._structure.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0b7e879f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "designer._structure['seq'] == orig_seq"
    ]
   },
   {
@@ -549,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "73c5c78b-7919-4282-83f3-57afa45e37a7",
    "metadata": {},
    "outputs": [
@@ -567,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "53385d74-b670-466c-b63e-b8cfe6e04b96",
    "metadata": {},
    "outputs": [
@@ -575,19 +606,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'seq_info': [['seq_0', 'MESHAPGPRDYNPISDQIVRLTNTSDGYSRSLYGIGFGPFIITNRHLFTLNNGTLEIVSKHGVFTIENTTKLDQYLIEGRDIIIIKMPKDFPPFPTTLVFRQPVDGENITLVTRNFQSKVPVSLVSDTSPTTPSSNGTFWKHWIPTKDGQCGSPLVSTEDGAIVGIHSASNFTNTNNYFTAVPPDFEDLLNNPAKQKWVSGWHLNSDSVNWGGHKVFMDKP'], ['seq_1', 'MESHAPGPRDYNPISDQIVRLTNTSDGYSRSLYGIGFGPFIITNRHLFVLNNGTLEIVSKHGVFTIENTTKLDQVLIEGRDIIIIKMPKDFPPFPTTLVFRQPVDGENITLVTRNFQAKVPESLVSDTSPTTPSSNGTFWKHWIPTKDGQCGSPLVSTEDGAIVGIHSASNFTNTNNYFTAVPPNFMDLLNDPAKQKWVSGWKLNSDSVNWGGHKVFMDKP'], ['seq_2', 'MESHAPGPRDYNPISDQIVRLTNTSDGYSRSLYGIGFGPYIITNRHLFVLNNGTLEIESKHGVFTIENTTELDQHLIDGRDIIIIKMPKDFPPFPTTLVFRQPVDGENITLVTRNFQAKVPVSLVSDTSPTTPSSNGTFWKHWIPTKDGQCGSPLVSTEDGAIVGIHSASNFTNTNNYFTAVPPNFEDLLNDPAKQKWISGWSLNSDSVNWGGHKVFMDKP']], 'start_ids': [1, 4, 15, 22, 24, 28, 33, 39, 45, 49, 54, 56, 60, 63, 65, 69, 71, 73, 77, 82, 86, 96, 99, 102, 104, 108, 110, 114, 118, 120, 124, 128, 130, 136, 145, 155, 158, 162, 164, 166, 180, 184, 187, 191, 199, 201, 203, 206, 210], 'end_ids': [1, 6, 20, 22, 24, 30, 33, 40, 45, 50, 54, 58, 60, 63, 67, 69, 71, 75, 80, 84, 87, 97, 99, 102, 106, 108, 111, 114, 118, 122, 124, 128, 132, 138, 145, 155, 159, 162, 164, 166, 181, 185, 189, 197, 199, 201, 203, 207, 210], 'pdb_path': '/nfs_beijing_td/nfsshare/nfshome/ming/em/meso_thermo/inverse_fold/data/1lvm_pdbs/1lvm_chain_A.pdb', 'temperature': 0.1, 'seed': 123}]\n"
+      "[{'seq_info': [['seq_0', 'MESHMPGPRDYNPISNEIVRLENKSDGHKASLYGIGFGPFIITNRHLFRKNNGTLTIHSKHGVFKISNTTSLDQYLVDGKDLIIIMMPKDFPPFPQHLIFRQPKDGEAITLVTRNFQTKVKVSIVSDTSTIQPSSAGMFWKHWIQTKDGQCGSPLVSTDDGAIVGIHSASNFTNTNNYFTSVPAEFESLLNNPHRQDWISGWRLNSTSVDWGGHKVFMDKP'], ['seq_1', 'RESAAPGPRDYNPISSQIVLLRNESDGERLSLYGIGFGPFIITNRHLFTKNNGTLALMSAHGVFKIQNTTKLDQVLIKGKDIIIIQMPKDFPPFPKELVFRQPVTGEQITMVTRNFQAKRPASEVSDVSATQPSSDGVFWKHWIVTKDGQCGSPFVSTSDGSIVGIHSASNFTNTNNYFTAVPENFMELLNDPSKQKWISGWCLNSSSVNWGGHKVFMDKP'], ['seq_2', 'GESKKPGPRDYNPISDQIVKLTNTSDGYQTSLYGIGFGPYIITNRHLFYLNNGTLTINSKHGTFKVDNDTELDQHLINGHDLVIIDMPKDFPPFPQELKFRMPVEGEEITKVTRNFQRKIKSSEVSDVSPVYPSSNGTFWKHWIPTKDGQCGSPLVSRADGAIVGLHSASNFTNTNNYFTAVPKDFEDLLNCPSERKWRSGWSLNAQSVTWGGHKVFMDKP']], 'start_ids': [1, 4, 15, 22, 24, 28, 33, 39, 45, 49, 54, 56, 60, 63, 65, 69, 71, 73, 77, 82, 86, 96, 99, 102, 104, 108, 110, 114, 118, 120, 124, 128, 130, 136, 145, 155, 158, 162, 164, 166, 180, 184, 187, 191, 199, 201, 203, 206, 210], 'end_ids': [1, 6, 20, 22, 24, 30, 33, 40, 45, 50, 54, 58, 60, 63, 67, 69, 71, 75, 80, 84, 87, 97, 99, 102, 106, 108, 111, 114, 118, 122, 124, 128, 132, 138, 145, 155, 159, 162, 164, 166, 181, 185, 189, 197, 199, 201, 203, 207, 210], 'pdb_path': '/nfs_beijing_td/nfsshare/nfshome/ming/em/meso_thermo/inverse_fold/data/1lvm_pdbs/1lvm_chain_A.pdb', 'temperature': 1.0, 'seed': 123}]\n"
      ]
     }
    ],
    "source": [
     "res = pickle.load(open('./inpaint_test/pred.pkl', 'rb'))\n",
-    "print(res)"
+    "print(res)  # same to notebook results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5f4a902-59cb-4948-81fc-6fadaf117bea",
+   "id": "04a11695",
    "metadata": {},
    "outputs": [],
    "source": []
